

                      ForkLabs JavaXPCOM, Build 20101007
                                Release Notes


INTRODUCTION

    This library is contains the basic skeleton to make a web crawler using
    the mozilla browser inside a SWT shell. The crawler can control the
    navigation and has access to the underlying DOM rendered by the browser.


USAGE

    The crawler is expected to be subclassed to include the control and
    data mining mechanisms. There is a console example class in src/test/java
    that fires up a browser, navigates to the project page and explores the
    main tabs (Project Home, Downloads, Wiki, ...).


LIMITATIONS

    The distribution includes a version of SWT and XULRunner for Windows. If
    you are to use this library on another operating system, you will have to
    install your own version of SWT and XULRunner and re-link the dependency
    in the POM.

    * http://www.eclipse.org/swt/
    * http://releases.mozilla.org/pub/mozilla.org/xulrunner/releases/

    Also, as with any SWT application, you will have to access the content of
    the underlying DOM inside the SWT thread, usually using the instance
    method Crawler#runOnSWTThread().


NEW FEATURES IN VERSION 20101007

   o Added two methods to control the enclosing shell, minimizeBrowser and
     restoreBrowser
   o Added a method to extract the "inner text" from a node in the
     XPCOMConverter, deprecated the same method in class Crawler
   o Partially completed Crawler::teardown() by having it close the enclosing
     shell, nothing is done yet about the display
   o Crawler::configureNewShell() is no longer abstract, it is now an empty
     method (issue #5).
   o Added Crawler::configureNewBrowser(), an empty method to help with the
     configuration of the underlying browser (issue #3).


VERSION 20100913

   o Permission has been given to use class DisplayManager
   o Fixed a bug in the logging of Crawler::navigateTo()